--- a/src/index.html
+++ b/src/index.html
@@ -504,6 +504,7 @@
                 <li><a href="#">Money refund</a></li>
                 <li><a href="#">Terms and Policy</a></li>
                 <li><a href="#">Open dispute</a></li>
+                <li><a href="contact.html">Contact</a></li>
               </ul>
             </aside>
             <aside class="col-sm-3">
