--- a/src/index.html
+++ b/src/index.html
@@ -505,7 +505,7 @@
                 <li><a href="#">Terms and Policy</a></li>
                 <li><a href="#">Open dispute</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="information.html">Contact</a></li>
+                <li><a href="information.html">information</a></li>
               </ul>
             </aside>
             <aside class="col-sm-3">
