:construction: Ajout du prix

--- a/src/index.html
+++ b/src/index.html
@@ -671,8 +671,8 @@
                   <aside class="col-sm-3 border-left">
                     <div class="action-wrap">
                       <div class="price-wrap h4">
-                        <span class="price"> </span>
-                        <del class="price-old"></del>
+                        <span class="price">$9998</span>
+                        <del class="price-old">$9999</del>
                       </div>
                       <!-- info-price-detail // -->
                       <p class="text-success">$800 delivery charges</p>
