--- a/src/index.html
+++ b/src/index.html
@@ -639,16 +639,12 @@
     <!-- ========================= SECTION  ========================= -->
     <section class="section-name bg-white padding-y">
       <div class="container">
-        <h4>Another section if needed</h4>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+        <h4>Inscription à la newsletter</h4>
+        <form action="#" method="post">
+          Email : <input type="text" title="votre@mail.ici">
+          <br>
+          <input type="button" value="S'inscrire">
+        </form>
       </div>
       <!-- container // -->
     </section>
