:debug: Renommage des produits

--- a/src/index.html
+++ b/src/index.html
@@ -335,7 +335,7 @@
                   </aside>
                   <!-- col.// -->
                   <article class="col-sm-6">
-                    <h4 class="title">Ut wisi enim ad minim veniam</h4>
+                    <h4 class="title">Cooking robot</h4>
                     <div class="rating-wrap  mb-2">
                       <ul class="rating-stars">
                         <li style="width:80%" class="stars-active">
@@ -356,7 +356,7 @@
                     <p>
                       Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
                       Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                      Ut wisi enim ad minim veniam
+                      Cooking robot
                     </p>
                     <dl class="dlist-align">
                       <dt>Color</dt>
@@ -410,7 +410,7 @@
                   </aside>
                   <!-- col.// -->
                   <article class="col-sm-6">
-                    <h4 class="title">Ut wisi enim ad minim veniam</h4>
+                    <h4 class="title">Iron</h4>
                     <div class="rating-wrap mb-2">
                       <ul class="rating-stars">
                         <li style="width:50%" class="stars-active">
@@ -431,7 +431,7 @@
                     <p>
                       Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
                       Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                      Ut wisi enim ad minim veniam
+                      Cooking robot
                     </p>
                     <dl class="dlist-align">
                       <dt>Color</dt>
@@ -507,7 +507,7 @@
                     <p>
                       Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
                       Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                      Ut wisi enim ad minim veniam
+                      Cooking robot
                     </p>
                     <dl class="dlist-align">
                       <dt>Color</dt>
@@ -583,7 +583,7 @@
                     <p>
                       Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
                       Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                      Ut wisi enim ad minim veniam
+                      Cooking robot
                     </p>
                     <dl class="dlist-align">
                       <dt>Color</dt>
@@ -659,7 +659,7 @@
                     <p>
                       Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
                       Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                      Ut wisi enim ad minim veniam
+                      Cooking robot
                     </p>
                     <dl class="dlist-align">
                       <dt>Color</dt>
